# Osumup

./: .gitignore  README.md
CxxUrl-master/: url.hpp
osum-direct-web/: Cargo.toml  README.md  rustfmt.toml
osum-direct-web/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
osum-direct-web/.github/workflows/: rust.yml
osum-direct-web/src/: cli.rs  configuration.rs  main.rs  registry.rs
osum-direct-web/src/osu/: client.rs  launcher.rs
osum-direct-web/userscripts/: osum!direct-web-standalone.user.js  osum!direct-web.user.js
osum-mutiplayer/: libs.h  main.cpp
