cargo-features = ["strip"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "osum-direct-web"
version = "1.0.0"
authors = ["oSumAtrIX"]
edition = "2021"

[dependencies]
winreg = "0.10"
clearscreen = "1.0"
clap = "3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
sanitize-filename = "0.3"
chrono = "0.4"